examples/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhooker
  namespace: terraform
  labels:
    application: webhooker
    component: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      application: webhooker
      component: webserver
  template:
    metadata:
      labels:
        application: webhooker
        component: webserver
    spec:
      serviceAccountName: webhooker
      containers:
      - name: webhooker
        image: davimmt/webhooker:0.0.4
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /app/.ssh
          name: ssh-volume
          readOnly: false
        - name: tz-sp
          mountPath: /etc/localtime
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 512m
            memory: 1Gi
          requests:
            cpu: 512m
            memory: 512Mi
        securityContext:
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1001
      volumes:
      - name: ssh-volume
        emptyDir: {}
      - name: git-secret
        secret:
          secretName: bitbucket-ssh-key
          defaultMode: 256
      - name: tz-sp
        hostPath:
          path: /usr/share/zoneinfo/America/Sao_Paulo
---
apiVersion: v1
kind: Service
metadata:
  name: webhooker
  namespace: terraform
  labels:
    application: webhooker
    component: webserver
spec:
  selector:
    application: webhooker
    component: webserver
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
